[metadata]
name = libdyson
version = 0.1.0
author = Xiaonan Shen
author_email = s@sxn.dev
license = MIT License
license_file = LICENSE
platforms = any
description = A Python library for Dyson devices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shenxn/libdyson
keywords = dyson
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
